--- a/howyouroll/index.html
+++ b/howyouroll/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <html>
 <body>
-
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -27,7 +28,6 @@
 	    </tr>
 	  </thead>
 	  <tbody id="diceresults">
-	    <tr><td>roll</td><td>prob</td></tr>
 	  </tbody>
 	</table>
 	<div id="bestroll"></div>
