--- a/howyouroll/index.html
+++ b/howyouroll/index.html
@@ -68,7 +68,7 @@
     <button type="button" class="btn btn-default" onclick="button_with()">with</button> 
     <button type="button" class="btn btn-default" onclick="button_where()">where</button>
     <button type="button" class="btn btn-default" onclick="button_iffail()">iffail</button>
-    <button type="button" class="btn btn-default" onclick="button_CLEAR()">CLEAR</i></button> 
+    <button type="button" class="btn btn-default" onclick="button_BACK()">BACK</i></button> 
     <button type="button" class="btn btn-default" onclick="button_HELP()">HELP</button>
     </div>
 
