no help, just clear. Probably should have a help eventually though.

--- a/howyouroll/index.html
+++ b/howyouroll/index.html
@@ -69,7 +69,7 @@
     <button type="button" class="btn btn-default" onclick="button_where()">where</button>
     <button type="button" class="btn btn-default" onclick="button_iffail()">iffail</button>
     <button type="button" class="btn btn-default" onclick="button_BACK()">BACK</i></button> 
-    <button type="button" class="btn btn-default" onclick="button_HELP()">HELP</button>
+    <button type="button" class="btn btn-default" onclick="button_CLEAR()">CLEAR</button>
     </div>
 
 <script>
