--- a/robby.html
+++ b/robby.html
@@ -10,7 +10,8 @@
 
 <body>
 
-<!-- This document was automatically generated with bibtex2html 1.98
+<!-- 
+     "Good page" This document was automatically generated with bibtex2html 1.98
      (see http://www.lri.fr/~filliatr/bibtex2html/),
      with the following command:
      /usr/bin/bibtex2html robby.bib  -->
