--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 		<td valign="top" width="380"><span class="nfakPe">
 Robby McKilliam completed undergraduate studies in computer systems engineering and mathematics at the University of Queensland, Brisbane, Australia 
 and obtained his PhD in Electrical Engineering at the University of Queensland in 2010. From 2011 to 2016 he worked as a Research Fellow and 
-later Senior Research Fellow at the University of South Australia's Institute for Telecommunications Research. He currently works at Myriota Pty. Ltd. designing the worlds 
-most reliable and cost efficient narrowband satellite communication system. His technical fields of interest are estimation theory, statistical signal processing, 
-communications, and computational number theory. He admires Lamport's structured proofs and is a fan of test driven development and reproducible research.
+later Senior Research Fellow at the University of South Australia's Institute for Telecommunications Research. He currently works at Myriota Pty. Ltd.
+His technical fields of interest are estimation theory, statistical signal processing, communications, and computational number theory.
+He admires Lamport's structured proofs and is a fan of test driven development, open source software, and reproducible research.
 <!--<p> <a href="cv.pdf">A copy of my current cv is here.</a> </p> -->
 		<p> <b>Address</b>
 		<br> Myriota Pty. Ltd.
-		<br> 25 Chesser St, 
-		<br> Adelaide, SA, Australia, 5000 </p>
+		<br> Level 1, McEwin Building, Lot Fourteen
+		<br> North Terrace, Adelaide, Australia, 5000 </p>
 		<p> <b>Email</b> robby.mckilliam_at_myriota.com</p>
 		<p>&nbsp;
 		<!--<p> <it>
@@ -82,6 +82,33 @@ R.&nbsp;G. McKilliam.
 <b>Journal Papers </b>
 
 <table cellpadding="4" cellspacing="0" width="600" >
+
+<tr valign="top">
+<td>[<script>
+document.write(refcounter); increment();
+  </script>]</td>
+<td class="bibtexitem">
+R.&nbsp;G.&nbsp;McKilliam, D.&nbsp;Haley, A.&nbsp;Pollok, A.&nbsp;Grant, A.&nbsp;Beck, and Z.&nbsp;Zhou.
+ Small data, low cost, anywhere on earth.
+ <em>IEEE Potentials</em>, 38(2):18–20, Mar 2019.
+[&nbsp;<a href="robby_bib.html#McKilliamIEEEPotentials">bib</a>&nbsp;]
+</td>
+</tr>
+
+<tr valign="top">
+<td>[<script>
+document.write(refcounter); increment();
+  </script>]</td>
+<td class="bibtexitem">
+D.&nbsp;Haley, A.&nbsp;Beck, A.&nbsp;Pollok, A.&nbsp;Grant, and R.&nbsp;G.&nbsp;McKilliam.
+ Massive scale, long battery life, direct to orbit connectivity for
+  the internet of things.
+ <em>Acta Astronautica</em>, 151:318 -- 323, 2018.
+[&nbsp;<a href="robby_bib.html#HALEY2018318">bib</a>&nbsp;| 
+<a href="https://doi.org/10.1016/j.actaastro.2018.06.035">doi</a>&nbsp;| 
+<a href="http://www.sciencedirect.com/science/article/pii/S0094576517315394">http</a>&nbsp;]
+</td>
+</tr>
 
 <tr valign="top">
 <td>[<script>
@@ -287,6 +314,23 @@ document.write(refcounter); increment();
 
 <table cellpadding="4" cellspacing="0" width="600" >
 
+<tr valign="top">
+<td>[<script>
+document.write(refcounter); increment();
+  </script>]</td>
+</td>
+<td class="bibtexitem">
+M.&nbsp;D. McDonnell, R.&nbsp;G.&nbsp;McKilliam, and P.&nbsp;de&nbsp;Chazal.
+ On the importance of pair-wise feature correlations for image
+  classification.
+ In <em>International Joint Conference on Neural Networks (IJCNN)</em>,
+  2016.
+[&nbsp;<a href="robby_bib.html#McDonnellNN">bib</a>&nbsp;]
+
+</td>
+</tr>
+
+  
 <tr valign="top">
 <td>[<script>
 document.write(refcounter); increment();
@@ -570,6 +614,10 @@ R.&nbsp;McKilliam and G.&nbsp;Wyeth. Fast and robust stereo object recognition
 <br>
 <b>Invited Talks</b>
 <table cellpadding="4" cellspacing="0" width="600">
+
+<tr valign="top"><td> 
+Finding shortest and closest vectors in a lattice of Voronoi's first kind. <em>65th Annual Meeting of the Australian Mathematical Society</em>, University of Newcastle, Australia, 2021. [&nbsp;<a href="talks/closestpointfirsttype.pdf">pdf</a>&nbsp;]
+</td></tr>
 
 <tr valign="top"><td> 
 Finding shortest and closest vectors in a lattice of Voronoi's first kind. <em>Workshop on interactions between number theory and wireless communication</em>, University of York, United Kingdom, 2014. [&nbsp;<a href="talks/closestpointfirsttype.pdf">pdf</a>&nbsp;]
