--- a/index.html
+++ b/index.html
@@ -14,17 +14,16 @@
 <table cellpadding="0" cellspacing="0" width="800">
 	<tr>
 		<td valign="top" width="380"><span class="nfakPe">
-Robby McKilliam completed undergraduate studies in computer systems engineering and mathematics at the University of Queensland, Brisbane, Australia 
-and obtained his PhD in Electrical Engineering at the University of Queensland in 2010. From 2011 to 2016 he worked as a Research Fellow and 
-later Senior Research Fellow at the University of South Australia's Institute for Telecommunications Research. He currently works at Myriota Pty. Ltd.
-His technical fields of interest are estimation theory, statistical signal processing, communications, and computational number theory.
-He admires Lamport's structured proofs and is a fan of test driven development, open source software, and reproducible research.
-<!--<p> <a href="cv.pdf">A copy of my current cv is here.</a> </p> -->
+		    Robby McKilliam completed undergraduate studies in computer systems engineering and mathematics at the University of Queensland, Brisbane, Australia and obtained his PhD in Electrical Engineering at the University of Queensland in 2010.
+		    From 2011 to 2016 he worked as a Research Fellow and later Senior Research Fellow at the University of South Australia.
+		    From 2016 to May 2021 he helped Myriota build it's secure, low cost, long-battery life satellite communications technology.
+		    He currently works at <a href="whipbird.au">Whipbird Signals</a>.
+		    His technical fields of interest are estimation theory, statistical signal processing, communications, and computational number theory.
+		    <!--<p> <a href="cv.pdf">A copy of my current cv is here.</a> </p> -->
 		<p> <b>Address</b>
-		<br> Myriota Pty. Ltd.
-		<br> Level 1, McEwin Building, Lot Fourteen
-		<br> North Terrace, Adelaide, Australia, 5000 </p>
-		<p> <b>Email</b> robby.mckilliam_at_myriota.com</p>
+		<br> Whipbird Signals
+		<br> 1/29 Main Street, 
+		<br> Samford Village, QLD, Australia, 4520 </p>
 		<p>&nbsp;
 		<!--<p> <it>
 		</td>-->
